--- a/src/styles.css
+++ b/src/styles.css
@@ -293,7 +293,37 @@ i {
     align-items: center;
     justify-content: space-evenly;
 }
+/*----------------------------loader --------------------*/
+#loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--accent-200);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+.spinner {
+    border: 0.7rem solid #f3f3f3;
+    border-top: 0.7rem solid #3498db;
+    border-radius: 50%;
+    width: 7rem;
+    height: 7rem;
+    animation: spin 1s linear infinite;
+ }
 
+/*-------------------------- animation --------------------------------*/
+@keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+}
 /*---------------------------mediaQuery---------------------------*/
 
 @media (min-width: 1024px) {
