--- a/src/styles.css
+++ b/src/styles.css
@@ -143,6 +143,11 @@ header {
     position: sticky;
     top: 0;
     z-index: 50;
+    transition: border-bottom 0.4s;
+}
+
+.header_scroll {
+    border-bottom: 0.5rem solid var(--text-200);
 }
 
 header > nav {
