--- a/src/styles.css
+++ b/src/styles.css
@@ -323,7 +323,51 @@ i {
     width: 7rem;
     height: 7rem;
     animation: spin 1s linear infinite;
- }
+}
+
+/*----------------------------- modal ---------------------------*/
+
+.containtModal {
+    top: 0;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s, visibility 0.5s;
+}
+
+.contentModal__show {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    position: relative;
+    width: 40%;
+    background-color: var(--bg-200);
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+.close_modal {
+    position: absolute;
+    cursor: pointer;
+    border: 2px solid var(--primary-200);
+    width: 1.5rem;
+    height: 1.5rem;
+    right: 10px;
+    border-radius: 50%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 /*-------------------------- animation --------------------------------*/
 @keyframes spin {
