modal_tittle_bug_solution

--- a/src/styles.css
+++ b/src/styles.css
@@ -355,6 +355,10 @@ i {
     border-radius: 1rem;
 }
 
+.modal > h4 {
+    width: 80%;
+}
+
 .close_modal {
     position: absolute;
     cursor: pointer;
